--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "namor",
   "version": "0.3.0",
-  "description": "a subdomain name generator",
+  "description": "A domain-safe name generator",
   "author": "Zab",
   "license": "MIT",
   "homepage": "https://zab.github.io/namor/",
@@ -42,26 +42,24 @@
   },
   "devDependencies": {
     "ava": "0.16.0",
-    "babel-cli": "6.14.0",
-    "babel-preset-es2015": "6.14.0",
-    "babel-preset-stage-0": "6.5.0",
-    "babel-register": "6.14.0",
+    "babel-cli": "6.18.0",
+    "babel-preset-latest": "6.16.0",
+    "babel-register": "6.18.0",
     "babelify": "7.3.0",
-    "browserify": "13.1.0",
+    "browserify": "13.1.1",
     "coveralls": "2.11.14",
     "envify": "3.4.1",
-    "glob": "7.1.0",
-    "npm-run-all": "3.1.0",
-    "nyc": "8.3.0",
+    "glob": "7.1.1",
+    "npm-run-all": "3.1.1",
+    "nyc": "8.3.2",
     "snazzy": "5.0.0",
-    "source-map-support": "0.4.2",
-    "standard": "8.1.0",
-    "uglifyify": "3.0.3"
+    "source-map-support": "0.4.5",
+    "standard": "8.4.0",
+    "uglifyify": "3.0.4"
   },
   "babel": {
     "presets": [
-      "es2015",
-      "stage-0"
+      "latest"
     ],
     "ignore": [
       "**/*.test.js"
