--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "license",
     "readme.md"
   ],
+  "engines": {
+    "node": ">=6"
+  },
   "main": "dist/index.js",
   "scripts": {
     "test:lint": "standard --verbose | snazzy",
-    "test:unit": "nyc mocha test -r babel-register",
+    "test:unit": "nyc mocha test -r @babel/register",
     "test:coverage": "nyc report -r=lcov",
     "test": "npm run build:data && npm-run-all test:*",
     "coveralls": "cat coverage/lcov.info | coveralls",
@@ -39,9 +42,11 @@
     "prepare": "npm run build"
   },
   "devDependencies": {
-    "babel-cli": "6.26.0",
-    "babel-preset-latest": "6.24.1",
-    "babel-register": "6.26.0",
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.1",
+    "@babel/node": "7.0.0",
+    "@babel/preset-env": "7.0.0",
+    "@babel/register": "7.0.0",
     "chai": "4.1.2",
     "coveralls": "3.0.2",
     "glob": "7.1.3",
@@ -60,7 +65,12 @@
   },
   "babel": {
     "presets": [
-      "latest"
+      "@babel/preset-env"
+    ]
+  },
+  "nyc": {
+    "require": [
+      "@babel/register"
     ]
   }
 }
