--- a/package.json
+++ b/package.json
@@ -1,78 +1,78 @@
 {
-  "name": "namor",
-  "version": "1.1.3",
-  "description": "A domain-safe name generator",
-  "author": "Jason Maurer",
-  "license": "MIT",
-  "homepage": "https://github.com/jsonmaur/namor#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jsonmaur/namor.git"
-  },
-  "keywords": [
-    "name",
-    "subdomain",
-    "generator",
-    "random",
-    "url",
-    "friendly",
-    "manly"
-  ],
-  "files": [
-    "assets/",
-    "dist/",
-    "index.d.ts",
-    "data.json",
-    "license",
-    "readme.md"
-  ],
-  "engines": {
-    "node": ">=6"
-  },
-  "main": "dist/index.js",
-  "types": "index.d.ts",
-  "scripts": {
-    "test:lint": "standard --verbose | snazzy",
-    "test:unit": "nyc mocha test -r @babel/register",
-    "test:coverage": "nyc report -r=lcov",
-    "test": "npm run build:data && npm-run-all test:*",
-    "coveralls": "cat coverage/lcov.info | coveralls",
-    "build:data": "rm -f data.json && babel-node data/scripts/build",
-    "build:node": "rm -rf dist && babel src -d dist",
-    "build": "npm-run-all build:*",
-    "watch": "npm run build:node -- -w -s",
-    "prepare": "npm run build"
-  },
-  "devDependencies": {
-    "@babel/cli": "7.6.2",
-    "@babel/core": "7.6.2",
-    "@babel/node": "7.6.2",
-    "@babel/preset-env": "7.6.2",
-    "@babel/register": "7.6.2",
-    "chai": "4.2.0",
-    "coveralls": "3.0.6",
-    "glob": "7.1.4",
-    "mocha": "6.2.1",
-    "npm-run-all": "4.1.5",
-    "nyc": "14.1.1",
-    "snazzy": "8.0.0",
-    "source-map-support": "0.5.13",
-    "standard": "14.3.1"
-  },
-  "standard": {
-    "globals": [
-      "describe",
-      "it"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
-  },
-  "nyc": {
-    "require": [
-      "@babel/register"
-    ]
-  }
+	"name": "namor",
+	"version": "1.1.3",
+	"description": "A domain-safe name generator",
+	"author": "Jason Maurer",
+	"license": "MIT",
+	"homepage": "https://github.com/jsonmaur/namor#readme",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/jsonmaur/namor.git"
+	},
+	"engines": {
+		"node": ">=6"
+	},
+	"keywords": [
+		"name",
+		"subdomain",
+		"generator",
+		"random",
+		"url",
+		"friendly",
+		"manly"
+	],
+	"files": [
+		"assets/",
+		"dist/",
+		"license",
+		"readme.md"
+	],
+	"main": "dist/index.js",
+	"scripts": {
+		"clean": "rm -rf dist coverage src/_data.ts",
+		"prettier": "prettier './**/*.{ts,json,yml,md}'",
+		"format": "npm run prettier -- --write",
+		"format:check": "npm run prettier -- --check",
+		"pretest": "npm run build:data",
+		"test": "npm run format:check && jest --coverage",
+		"coveralls": "cat coverage/lcov.info | coveralls",
+		"prebuild": "npm run clean && npm run build:data",
+		"build": "tsc",
+		"build:data": "ts-node data/build",
+		"prepare": "npm run build"
+	},
+	"dependencies": {
+		"crypto-extra": "1.0.1"
+	},
+	"devDependencies": {
+		"@types/glob": "7.1.1",
+		"@types/jest": "24.0.23",
+		"@types/node": "12.12.7",
+		"coveralls": "3.0.7",
+		"jest": "24.9.0",
+		"prettier": "1.19.1",
+		"ts-jest": "24.1.0",
+		"ts-node": "8.5.2",
+		"typescript": "3.7.2"
+	},
+	"prettier": {
+		"semi": false,
+		"useTabs": true,
+		"trailingComma": "all",
+		"arrowParens": "always"
+	},
+	"jest": {
+		"testEnvironment": "node",
+		"transform": {
+			"\\.ts$": "ts-jest"
+		},
+		"collectCoverageFrom": [
+			"src/**/*.ts",
+			"!src/_data.ts"
+		],
+		"coverageReporters": [
+			"lcov",
+			"text"
+		]
+	}
 }
